<?xml version="1.0"?>
<package format="2">
    <name>rviz_aerial_map</name>
    <version>0.1.0</version>
    <description>Display aerial image tiles in RViz</description>
    <author>Andreas Reich</author>
    <maintainer email="andreas.reich@unibw.de">anre</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roslint</build_depend>
    <depend>roscpp</depend>
    <depend>rviz</depend>
    <depend>sensor_msgs</depend>
    <depend>ogre_primitives</depend>
    <depend>tas_proj</depend>
    <depend>libgdal-dev</depend>
    <depend>boost</depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
