<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rviz_aerial_map</name>
    <version>0.1.0</version>
    <description>Display aerial image tiles in RViz</description>
    <author>Andreas Reich</author>
    <maintainer email="andreas.reich@unibw.de">anre</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>qtbase5-dev</build_depend>
    <build_depend>rviz_ogre_vendor</build_depend>

    <build_export_depend>rviz_ogre_vendor</build_export_depend>

    <exec_depend>libqt5-core</exec_depend>
    <exec_depend>libqt5-gui</exec_depend>
    <exec_depend>libqt5-opengl</exec_depend>
    <exec_depend>libqt5-widgets</exec_depend>
    <exec_depend>rviz_ogre_vendor</exec_depend>

    <depend>rclcpp</depend>
    <depend>rviz_common</depend>
    <depend>rviz_rendering</depend>
    <depend>sensor_msgs</depend>
    <depend>ogre_primitives</depend>
    <depend>tas_proj</depend>
    <depend>libgdal-dev</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
